Fixes #2256: Left item text in CRF should be aligned left by default. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2686 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -184,9 +184,8 @@ td .aka_revised {
 }
 
 .aka_text_block {
-    /*width: 10em; ticket #53*/
     float:left;
-    text-align:right
+    text-align:left;
 }
 
 .aka_text_block_shared {
